--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Gimena Bernadet <gimena.bernadet@dlocal.com>",
+  "author": "Gimena Bernadet <gimebernadet@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -15,7 +15,6 @@
     "mongoose": "^5.6.3",
     "mongoose-id-validator": "^0.5.3",
     "mongoose-unique-validator": "^2.0.3",
-    "node-config": "^1.0.34",
     "swagger-node-express": "^2.1.3",
     "swagger-ui-express": "^4.0.7"
   },
